// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> renders as expected 1`] = `
<form
  className="iap-login-form"
  onSubmit={[Function]}
>
  <p
    className="iap-login-form__title"
  >
    Identifo
  </p>
  <Input
    Icon={[Function]}
    disabled={false}
    errorMessage=""
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />
  <Input
    Icon={[Function]}
    disabled={false}
    errorMessage=""
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
  />
  <footer
    className="iap-login-form__footer"
  >
    <LoginButton
      error={false}
      loading={false}
      onClick={null}
    />
  </footer>
</form>
`;

exports[`<LoginForm /> renders as expected when error 1`] = `
<form
  className="iap-login-form"
  onSubmit={[Function]}
>
  <p
    className="iap-login-form__title"
  >
    Identifo
  </p>
  <div
    className="iap-login-form__err"
  >
    <FormErrorMessage
      error={[Error: message]}
    />
  </div>
  <Input
    Icon={[Function]}
    disabled={false}
    errorMessage=""
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />
  <Input
    Icon={[Function]}
    disabled={false}
    errorMessage=""
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
  />
  <footer
    className="iap-login-form__footer"
  >
    <LoginButton
      error={true}
      loading={false}
      onClick={null}
    />
  </footer>
</form>
`;

exports[`<LoginForm /> renders as expected when signing in 1`] = `
<form
  className="iap-login-form"
  onSubmit={[Function]}
>
  <p
    className="iap-login-form__title"
  >
    Identifo
  </p>
  <Input
    Icon={[Function]}
    disabled={true}
    errorMessage=""
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
    value=""
  />
  <Input
    Icon={[Function]}
    disabled={true}
    errorMessage=""
    name="password"
    onChange={[Function]}
    placeholder="Password"
    type="password"
    value=""
  />
  <footer
    className="iap-login-form__footer"
  >
    <LoginButton
      error={false}
      loading={true}
      onClick={null}
    />
  </footer>
</form>
`;
